<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Limbo Emulator</string>
    <string name="app_short_name">Limbo</string>
    <string name="address_caption">Address</string>
    <string name="alt_check">Alt</string>
    <string name="arrow_down">Down Arrow</string>
    <string name="arrow_left">Left Arrow</string>
    <string name="arrow_right">Right Arrow</string>
    <string name="arrow_up">Up Arrow</string>
    <string name="auto">Auto</string>
    <string name="button_send_text">Send Text</string>
    <string name="button_send_without_saving">Send Text/Don\'t Save It</string>
    <string name="center_mouse">Mouse</string>
    <string name="close">Close</string>
    <string name="color_format_caption">Color Format</string>
    <string name="color_mode">Color Mode</string>
    <string name="connect_button">Connect</string>
    <string name="connection_caption">Connection</string>
    <string name="control_check">Ctrl</string>
    <string name="reset">Reset</string>
    <string name="shutdown">Shutdown</string>
    <string name="copy_list_button">Copy List</string>
    <string name="ctrl_alt_del">Ctrl-Alt-Del</string>
    <string name="ctrl_c">Ctrl-c</string>
    <string name="delete_connection">Delete Connection</string>
    <string name="delete_key">Delete Selected Key</string>
    <string name="delete_key_list">Delete Key List</string>
    <string name="disconnect">Disconnect</string>
    <string name="devices">Devices</string>
    <string name="external_mouse">External Mouse</string>
    <string name="monitor">QEMU Monitor</string>
    <string name="export_settings">Export</string>
    <string name="export_settings_path">Export to file</string>
    <string name="enter_text_title">Enter Text to Send</string>
    <string name="enter_text">Send text</string>
    <string name="stretch_to_screen">Stretch to Screen</string>
    <string name="fit_to_screen">Fit to Screen</string>
    <string name="full_screen">Fullscreen</string>
    <string name="toggle_full_screen">Toggle Fullscreen</string>
    <string name="zoom_in">Zoom In</string>
    <string name="zoom_out">Zoom Out</string>
    <string name="force_full_check">Force full-screen bitmap</string>
    <string name="import_export_settings">Import/Export Settings</string>
    <string name="import_settings">Import</string>
    <string name="import_settings_file_url">Import from file or URL</string>
    <string name="info">Info</string>
    <string name="intro_text">If you need help, please check the &lt;a href="http://code.google.com/p/android-vnc-viewer/wiki/Documentation"&gt;manual&lt;/a&gt; (press phone\'s Menu button to access manual and other menu items), or the &lt;a href="http://code.google.com/p/android-vnc-viewer/wiki/faq"&gt;FAQ&lt;/a&gt;.&lt;br&gt;</string>
    <string name="intro_title">Welcome</string>
    <string name="intro_version_text">&lt;br&gt;--Sent text is remembered across sessions (optionally)&lt;br&gt;--Import/Export settings to file&lt;br&gt;--Button with zoom controls to bring up keyboard&lt;br&gt;--Can force tiling mode (very large screens)</string>
    <string name="input_mode">Input Mode</string>
    <string name="input_mode_fit_to_screen">No Pan; Trackball Mouse</string>
    <string name="input_mode_mouse">Mouse Pointer Control Mode</string>
    <string name="input_mode_panning">Desktop Panning Mode</string>
    <string name="input_mode_touchpad_pan_trackball_mouse">Touch Pan; Trackball Mouse</string>
    <string name="input_mode_dpad_pan_touchpad_mouse">Touch Mouse; D-Pad Pan</string>
    <string name="input_mode_touch_pan_zoom_mouse">Touch Mouse Pan and Zoom</string>
    <string name="input_mode_touchpad">Touchpad</string>
    <string name="keep_password_button">Keep</string>
    <string name="intro_dont_show">Don\'t show again</string>
    <string name="keys_caption">Keys</string>
    <string name="list_caption">List</string>
    <string name="list_name_caption">List Name</string>
    <string name="local_mouse_check">Local mouse pointer</string>
    <string name="meta_key_title">Send Special Keys</string>
    <string name="mouse_follow_pan">Mouse follow pan</string>
    <string name="new_list_button">New List</string>
    <string name="nickname_caption">Nickname</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="one_to_one">Normal (1:1)</string>
    <string name="open_doc">Manual/Wiki</string>
    <string name="pan_follow_mouse">Pan Follows Mouse</string>
    <string name="password_caption">Password</string>
    <string name="port_caption">Port</string>
    <string name="repeater_button">Repeater</string>
    <string name="repeater_caption">Enter the repeater address &lt;b&gt;only if&lt;/b&gt; you are using an&lt;br&gt;&lt;i&gt;UltraVNC&lt;/i&gt;-type repeater</string>
    <string name="repeater_clear">Don\'t use repeater</string>
    <string name="repeater_dialog_title">Repeater Information</string>
    <string name="repeater_empty_text">No repeater</string>
    <string name="repeater_save">Use this repeater address</string>
    <string name="save_as_copy">Save as Copy</string>
    <string name="scaling">Scaling</string>
    <string name="save_state">Pause VM</string>
    <string name="save_snapshot">Save Snapshot</string>
    <string name="scaling_zoomable">Zoomable</string>
    <string name="create">Create</string>
    <string name="discard_saved_state">Discard saved state</string>
    <string name="delete">Delete</string>
    <string name="stringimport">Import</string>
    <string name="export">Export</string>
    <string name="settings">Settings</string>
    <string name="install_roms">Install roms</string>
    <string name="changelog">Changelog</string>
    <string name="license">License</string>
    <string name="exit">Exit</string>
    <string name="menu">Menu</string>
    <string name="open">Open</string>
    <!-- Send selected metakey -->
    <string name="send_button">Send</string>
    <string name="send_key_again">Send Key Again</string>
    <string name="shift_check">Shift</string>
    <string name="shortcut_label">VNC Connection</string>
    <string name="showkbd_label">Keyboard</string>
    <string name="special_keys">Special Keys</string>
    <string name="username_caption">Username</string>
    <string name="username_hint">For Windows Authentication</string>
    <string name="right_click">Mouse Right Click</string>
    <string name="help">Help</string>
    <string name="drives">Drives</string>
    <string name="volume">Volume</string>
    <string name="hide_toolbar">Hide Toolbar</string>
    <string name="view_log">View Log</string>
    <string name="display_refresh_rate">Display Refresh Rate</string>
    <string name="ui_mode">UI Mode</string>
    <string name="display">Display</string>
    <string name="desktopInstructions">To use External Mouse:\n\tDisable Mouse Acceleration inside the Guest OS.\n\t\tFor DSL use command: xset m 1\n"\t\tFor Other OSes disable \"Enhance pointer Precision\" or choose Mouse \"usb-tablet\" from Limbo main options.\n\tPlug in or Pair your USB/Bluetooth Mouse and press OK\n\tMove your mouse pointer to all desktop sides to calibrate.\n"</string>
    <string name="reconnect">Reconnect</string>
    <string name="calibrate_mouse">Calibrate (Fix) Mouse</string>
    <string name="isos_and_tools_descr">Do you want to view a list of Compatible OSes and Download Links?</string>
    <string name="title_activity_setup_wizard">SetupWizardActivity</string>
    <string name="skip">Skip</string>
</resources>