<menu xmlns:android="http://schemas.android.com/apk/res/android" 
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".LimboSDLActivity">

    <item
        android:id="@+id/itemKeyboard"
        android:icon="@drawable/keyboard_24px"
        android:title="@string/showkbd_label"/>
    <item
        android:id="@+id/itemMouse"
        android:icon="@drawable/mouse_24px"
        android:title="@string/center_mouse"/>
    <item
        android:id="@+id/itemDrives"
        android:icon="@drawable/hard_drive_24px"
        android:title="@string/drives">
    </item>

    <item
        android:id="@+id/itemDisplay"
        android:icon="@drawable/tv_24px"
        android:title="@string/display"/>

    <item
        android:id="@+id/itemVolume"
        android:icon="@drawable/volume_up_24px"
        android:title="@string/volume">
    </item>

    <item
        android:id="@+id/itemMonitor"
        android:icon="@drawable/terminal_24px"
        android:title="@string/monitor">
    </item>

    <item
        android:id="@+id/itemHideToolbar"
        android:icon="@drawable/fullscreen_24px"
        android:title="@string/hide_toolbar"/>

    <item
        android:id="@+id/itemSaveState"
        android:icon="@drawable/pause_24px"
        android:title="@string/save_state"/>

    <item
        android:id="@+id/itemReset"
        android:icon="@drawable/refresh_24px"
        android:title="@string/reset"/>
    <item
        android:id="@+id/itemShutdown"
        android:icon="@drawable/power_settings_new_24px"
        android:title="@string/shutdown"/>


    <item
        android:id="@+id/itemViewLog"
        android:icon="@drawable/notes_24px"
        android:title="@string/view_log"/>

    <item
        android:id="@+id/itemHelp"
        android:icon="@drawable/help_24px"
        android:title="@string/help"/>

    <!--XXXX: Not needed-->
    <item
        android:id="@+id/itemScaling"
        android:icon="@drawable/zoom_in_24px"
        android:title="@string/scaling">
        <menu>
            <group
                android:id="@+id/groupScaling"
                android:checkableBehavior="single" >
                <item
                    android:id="@+id/itemOneToOne"
                    android:title="@string/one_to_one"/>
                <item
                    android:id="@+id/itemZoomIn"
                    android:title="@string/zoom_in"/>
                <item
                    android:id="@+id/itemZoomOut"
                    android:title="@string/zoom_out"/>
                <item
                    android:id="@+id/itemFitToScreen"
                    android:title="@string/fit_to_screen"/>
                <item
                    android:id="@+id/itemStretchToScreen"
                    android:title="@string/stretch_to_screen"/>
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/itemExternalMouse"
        android:icon="@drawable/mouse_24px"
        android:title="@string/external_mouse">
    </item>

    <item
        android:id="@+id/itemSaveSnapshot"
        android:icon="@drawable/save_24px"
        android:title="@string/save_snapshot"/>

    <item
        android:id="@+id/itemCtrlC"
        android:icon="@drawable/content_copy_24px"
        android:title="@string/ctrl_c"/>
    <item
        android:id="@+id/itemCtrlAltDel"
        android:icon="@drawable/error_24px"
        android:title="@string/ctrl_alt_del"/>


</menu>